--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.19 Fri, 24 Sep 1999 16:28:07 +0200 verna $
+% PRCS: $Id: fixme.dtx 1.20 Thu, 02 Dec 1999 16:19:04 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -42,12 +42,12 @@
 % \fi
 %
 % \catcode`\¡=14
-% \CheckSum{195}
+% \CheckSum{202}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{v$PackageVersion$}"$
-% \newcommand{\packageversion}{v1.1-b17}
+% \newcommand{\packageversion}{v1.1-b18}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
-% \newcommand{\packagedate}{1999/09/24}
+% \newcommand{\packagedate}{1999/12/02}
 % \newcommand{\fixme}{\textsf{FiXme}}
 % \MakeShortVerb{\|}
 % \date{\today}
@@ -101,8 +101,10 @@
 % extention is \texttt{lox}. The |\listoffixmes| macro generates the list of
 % all fixme notes in a manner similar to that of the list of figures for
 % instance. A standard layout is automatically used for the `article',
-% `report' and `book' classes. If another (unknown) class is used, the
-% `article' layout is selected.
+% `report' and `book' classes. If another class is used, the
+% `article' layout is selected. Also, note that if no fixmes were introduced
+% in the document, this macro doesn't generate an empty list, but rather stays
+% silent.
 %
 % \subsection{Global options}
 % The following options are usually given to |\documentclass{}| which in turn
@@ -195,7 +197,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$PackageDate$ v$PackageVersion$"$
-\ProvidesPackage{fixme}[1999/09/24 v1.1-b17
+\ProvidesPackage{fixme}[1999/12/02 v1.1-b18
                         Insert fixme notes in your draft documents]
 
 %    \end{macrocode}
@@ -203,7 +205,8 @@
 % \DescribeMacro{listoffixmes}
 % \DescribeMacro{listfixmename}
 %    \begin{macrocode}
-\newcommand\listoffixmes{}
+\newif\if@fixmes\@fixmesfalse
+\newcommand\listoffixmes{\if@fixmes\@listoffixmes\fi}
 \newcommand*\listfixmename{}
 
 %    \end{macrocode}
@@ -212,7 +215,7 @@
 % \DescribeMacro{listoffixmes@article}
 % \DescribeMacro{l@fixme@article}
 %    \begin{macrocode}
-\newcommand\listoffixmes@article{%
+\newcommand\@listoffixmes@article{%
   \section*{\listfixmename
     \@mkboth{\MakeUppercase\listfixmename}%
     {\MakeUppercase\listfixmename}}%
@@ -224,7 +227,7 @@
 % \DescribeMacro{listoffixmes@report}
 % \DescribeMacro{l@fixme@report}
 %    \begin{macrocode}
-\newcommand\listoffixmes@report{%
+\newcommand\@listoffixmes@report{%
   \if@twocolumn
     \@restonecoltrue\onecolumn
   \else
@@ -242,7 +245,7 @@
 % \DescribeMacro{listoffixmes@book}
 % \DescribeMacro{l@fixme@book}
 %    \begin{macrocode}
-\newcommand\listoffixmes@book{%
+\newcommand\@listoffixmes@book{%
   \if@twocolumn
     \@restonecoltrue\onecolumn
   \else
@@ -329,6 +332,7 @@
 
 \DeclareOption{draft}{
   \renewcommand{\fixme}[1]{%
+    \@fixmestrue%
     \iffixme@margin\FiXmeMargin{#1}\fi%
     \iffixme@footnote\FiXmeFootnote{#1}\fi%
     \iffixme@warning\FiXmeWarning{#1}\else\iffixme@info\FiXmeInfo{#1}\fi\fi%
@@ -337,16 +341,16 @@
     \addcontentsline{lox}{fixme}{#1}}
   \@ifclassloaded{article}{
     \let\l@fixme\l@fixme@article
-    \let\listoffixmes\listoffixmes@article}{
+    \let\@listoffixmes\@listoffixmes@article}{
     \@ifclassloaded{report}{
       \let\l@fixme\l@fixme@report
-      \let\listoffixmes\listoffixmes@report}{
+      \let\@listoffixmes\@listoffixmes@report}{
       \@ifclassloaded{book}{
         \let\l@fixme\l@fixme@book
-        \let\listoffixmes\listoffixmes@book}{
+        \let\@listoffixmes\@listoffixmes@book}{
         %% Use the article layout by default.
         \let\l@fixme\l@fixme@article
-        \let\listoffixmes\listoffixmes@article}
+        \let\@listoffixmes\@listoffixmes@article}
       }
     }
   }
